refactor(traits): removed Gang Element
- Gang Element was unnecessary and made the code more complicated
- made sure that the Images were loaded using image cache
- fixed the tests + added new lines